Kubernetes/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: llama-webapp-service-1 
            port:
              number: 7860
      - pathType: Prefix
        path: /
        backend:
          service:
            name: llama-webapp-service-2
            port:
              number: 7860
      - pathType: Prefix
        path: /
        backend:
          service:
            name: loadbl
            port:
              number: 80
